<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PedidoConfirmado">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPedidoConfirmado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/pedido_confimado"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/txtMensagem"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:padding="32dp"
            android:text="@string/aguarde_enquanto_seu_pedido_fica_pronto"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnOutroPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fazer_outro_pedido" />

        <Button
            android:id="@+id/btnFecharConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechar_conta" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>